syntax = "proto3";

package resources;

service Provider {
    rpc RequestTaskExecution (TaskExecutionRequest) returns (TaskExecutionRequestResponse) {}
}

message TaskExecutionRequest {
    string id = 1;
    string input = 2;
}

message TaskExecutionRequestResponse {
    string id = 1;
    string output = 2;
}

service Plugin {
    rpc RequestJobExecution (JobExecutionRequest) returns (JobExecutionRequestResponse) {}
}

message JobExecutionRequest {
    string id = 1;
    string input = 2;
}

message JobExecutionRequestResponse {
    string id = 1;
    string output = 2;
}